# MinSurf_Source

./: CMakeLists.txt  Makefile  a.out  atmsp.h  cartesianGrid.cpp  cartesianGrid.h  git push  inputParser.cpp  inputParser.h  install_dco.sh  minSurf.cpp  minSurf.h  nag_key.txt  params.in  paramsNew.in  postProcessor.cpp  postProcessor.h  solver.cpp  solver.h  test.cpp
Output/Residual/: residual.txt
Output/Solution/: output_1.vts  output_10.vts  output_11.vts  output_2.vts  output_3.vts  output_4.vts  output_5.vts  output_6.vts  output_7.vts  output_8.vts  output_9.vts
additionals/additionals/additionals/: gtest.cmake
additionals/cmake_scripts/: stce_utils.cmake
dco_cpp/case_studies/: Makefile
dco_cpp/case_studies/diffusion/: Makefile
dco_cpp/case_studies/mc/: Makefile  ad_data_view.hpp  config.h  local_vols.hpp  mrg32k3a.h
dco_cpp/case_studies/pde/: Makefile  ad_data_view.hpp  config.h  lapack.cpp  lapack.hpp  local_vols.hpp
dco_cpp/case_studies/race/: Makefile  x22.hpp
dco_cpp/doc/: in.html
dco_cpp/examples/: Makefile
dco_cpp/examples/fd_ga1s/: driver.cpp  driver.hpp  main.cpp
dco_cpp/examples/ga1s/: driver.cpp
dco_cpp/examples/ga1s_Jacobian/: driver.cpp  driver.hpp  main.cpp
dco_cpp/examples/ga1s_acm/: main.cpp
dco_cpp/examples/ga1s_cp_loop_equidist/: driver.cpp  driver.hpp  f.hpp  g.hpp  main.cpp
dco_cpp/examples/ga1s_cp_loop_rec/: driver.cpp  g_gap.hpp  main.cpp
dco_cpp/examples/ga1s_ensemble/: driver.cpp  driver.hpp  g.hpp  g_gap.hpp  main.cpp  ref_results
dco_cpp/examples/ga1s_external_manual/: driver.cpp  driver.hpp  f.hpp  g_gap.hpp  main.cpp
dco_cpp/examples/ga1s_jacobian_preaccumulation/: driver.cpp
dco_cpp/examples/ga1s_joint/: driver.cpp  g_gap.hpp  main.cpp
dco_cpp/examples/ga1s_mod/: Makefile  main.cpp  timestepping.hpp
dco_cpp/examples/ga1s_multiple_adjoint_vectors/: driver.cpp  f.h
dco_cpp/examples/ga1s_preaccumulation/: driver.cpp  g.hpp  main.cpp
dco_cpp/examples/ga1s_preaccumulation_gradient_t/: driver.hpp  f.hpp  g_gap.hpp
dco_cpp/examples/ga1s_recompute_all/: driver.cpp  driver.hpp  f.hpp  g.hpp  g_gap.hpp
dco_cpp/examples/ga1s_recursive_recompute_all/: Makefile  driver.cpp  driver.hpp  f.hpp  g_gap.hpp
dco_cpp/examples/ga1s_reverse_accumulation_newton/: driver.cpp  main.cpp  my_exp.hpp  my_sqrt.hpp
dco_cpp/examples/ga1s_reverse_accumulation_simple_exp/: driver.cpp  driver.hpp  main.cpp  my_exp.hpp
dco_cpp/examples/ga1s_reverse_accumulation_simple_sqrt/: driver.cpp  main.cpp
dco_cpp/examples/ga1s_scenarios/: driver.cpp  driver.hpp  main.cpp
dco_cpp/examples/ga1s_tape_data_types/: driver.cpp  driver.hpp  main.cpp  ref_results
dco_cpp/examples/ga1s_user_defined_adjoint/: driver.cpp  driver.hpp  g.hpp  main.cpp
dco_cpp/examples/ga1sm/: driver.cpp  main.cpp
dco_cpp/examples/ga1sm_user_defined_adjoint/: driver.cpp  f.hpp  g.hpp  g_gap.hpp  main.cpp
dco_cpp/examples/ga1v/: driver.cpp
dco_cpp/examples/ga1vm/: driver.cpp  driver.hpp  main.cpp
dco_cpp/examples/ga2s_ga1s/: driver.cpp  driver.hpp  main.cpp
dco_cpp/examples/ga2s_gt1s/: driver.cpp  main.cpp
dco_cpp/examples/gbcp/: driver.cpp  driver.hpp  f.hpp  main.cpp
dco_cpp/examples/gt1s/: driver.cpp  driver.hpp  main.cpp
dco_cpp/examples/gt1s_Jacobian/: driver.cpp  driver.hpp  f.hpp  main.cpp
dco_cpp/examples/gt1s_fd_smoothing/: driver.cpp  f.hpp  g_t1s.hpp  main.cpp
dco_cpp/examples/gt1s_linear_smoothing/: driver.cpp  driver.hpp  g.hpp  g_t1s.hpp  main.cpp
dco_cpp/examples/gt1s_nonlinear_smoothing/: driver.cpp  g_t1s.hpp
dco_cpp/examples/gt1s_user_defined_tangent/: driver.cpp  f.hpp  g.hpp  g_t1s.hpp
dco_cpp/examples/gt1v/: driver.cpp  driver.hpp  main.cpp
dco_cpp/examples/gt2s_ga1s/: driver.cpp  driver.hpp  main.cpp
dco_cpp/examples/gt2s_ga1s_Hessian/: driver.cpp  driver.hpp  f.hpp  main.cpp
dco_cpp/examples/gt2s_ga1s_cp_loop_equidist/: driver.cpp  driver.hpp  g_gap.hpp  main.cpp
dco_cpp/examples/gt2s_ga1s_cp_loop_rec/: driver.cpp  driver.hpp  f.hpp  g.hpp  g_gap.hpp  main.cpp
dco_cpp/examples/gt2s_ga1s_ensemble/: driver.cpp  driver.hpp  f.hpp  main.cpp  ref_results
dco_cpp/examples/gt2s_ga1s_external_manual/: driver.cpp  driver.hpp  f.hpp  g.hpp  g_a1s.hpp  g_gap.hpp  main.cpp
dco_cpp/examples/gt2s_ga1s_jacobian_preaccumulation/: driver.cpp  driver.h
dco_cpp/examples/gt2s_ga1s_joint/: driver.cpp  f.hpp  g.hpp  main.cpp
dco_cpp/examples/gt2s_ga1s_multiple_adjoint_vectors/: driver.cpp  main.cpp
dco_cpp/examples/gt2s_ga1s_preaccumulation/: f.hpp  g_gap.hpp  main.cpp
dco_cpp/examples/gt2s_ga1s_preaccumulation_gradient_t/: driver.cpp  driver.hpp  g_gap.hpp
dco_cpp/examples/gt2s_ga1s_user_defined_adjoint/: driver.cpp  driver.hpp  f.hpp  g_gap.hpp  main.cpp
dco_cpp/examples/gt2s_gt1s/: driver.cpp  (+2 more)
dco_cpp/include/: dco.hpp  dco_allocation.hpp  dco_complex.hpp  dco_configuration.hpp  dco_global_includes.hpp  dco_inc_cpp11.hpp  dco_inc_cpp98.hpp  dco_logging.hpp  dco_std_compatibility.hpp  dco_vector.hpp  dco_vector_avx_operations.hpp  dco_vector_common.hpp  dco_vector_math.hpp  dco_vector_operations.hpp  dco_vector_reference.hpp  dco_vector_traits.hpp  dco_version.hpp
testcases/pcswise/: params.in
testcases/scherk/: params.in
testcases/sine/: core.login18-1.hpc.itc.rwth-aachen.de.110396.8  core.login18-1.hpc.itc.rwth-aachen.de.22879.8  minSurf  params.in  run.sh
tests/: Test.cpp  Tests.cpp  params.in
(+114 files in other folders)
